type 컬럼의 값을 string에서 int로 변경

--- a/wine_quality.ipynb
+++ b/wine_quality.ipynb
@@ -1202,6 +1202,28 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.linear_model import LogisticRegression, Ridge\n",
+    "from sklearn.metrics import plot_roc_curve, accuracy_score, confusion_matrix, plot_confusion_matrix\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier, ExtraTreesClassifier\n",
+    "\n",
+    "ss= StandardScaler()\n",
+    "train[numerical_columns] = ss.fit_transform(train[numerical_columns])\n",
+    "\n",
+    "#factorize\n",
+    "train['type'] = pd.factorize(train['type'])[0]\n",
+    "\n",
+    "train.head(3)"
+   ]
   }
  ],
  "metadata": {
